<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <android.support.constraint.ConstraintLayout
    android:layout_width="384dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="27dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/img_result"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="153dp"
            android:layout_marginBottom="2dp"
            android:text="@string/amount_result_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/amount_j_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_j_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="8dp"
            android:text="@string/amount_j_result_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_result" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/amount_result_text_shown"
            app:layout_constraintEnd_toStartOf="@+id/amount_result"
            app:layout_constraintStart_toEndOf="@+id/img_result"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:text="@string/amount_j_result_text_shown"
            app:layout_constraintEnd_toStartOf="@+id/amount_j_result"
            app:layout_constraintStart_toEndOf="@+id/img_result"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

